--- a/demo-pl.html
+++ b/demo-pl.html
@@ -1,5 +1,7 @@
 #EXTM3U
 
+#EXTINF:-1 tvg-logo=" " group-title="Telugu", AtoZ TV
+https://atozl.onrender.com/index.html
 #EXTINF:-1 tvg-logo="https://i.ibb.co/39HHcXmv/1000151612.png" group-title="Telugu", Vinodam
 https://mumbai-edge.smartplaytv.in/VinodamHD/index.m3u8
 
